Fixing rendering issue on mobile - temporarily adding a red box-shadow to gradient-text

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -202,13 +202,12 @@ body {
       .home__text-box {
         margin: 2rem auto; } }
   .home-headline {
-    font-size: 2.5rem;
-    color: orangered; }
+    font-size: 2.5rem; }
     .home-headline--gradient {
       background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      overflow-y: hidden; }
+      box-shadow: 0 -1px 0 orangered; }
     @media (min-width: 56.25em) {
       .home-headline {
         font-size: 3.6rem;
