--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,12 +26,13 @@
     
     &-headline {
         font-size: 2.5rem;
-        color: orangered;
+        //color: orangered;
         
         &--gradient {
             @include gradient-text;
             //outline: 3px solid orangered;
-            overflow-y: hidden;
+            //overflow-y: hidden;
+            box-shadow: 0 -1px 0 orangered;
         }
         
         @include for-tablet-landscape-up {
